--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
     "build:tauri": "tauri build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@tauri-apps/cli": "^2.9.6",
     "@tsconfig/svelte": "^5.0.6",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
+    "@vitest/ui": "^4.0.18",
+    "better-sqlite3": "^12.6.2",
+    "happy-dom": "^20.3.7",
     "svelte": "^5.43.8",
     "svelte-check": "^4.3.4",
     "typescript": "~5.9.3",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "@tauri-apps/api": "^2.9.1",
