--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tauri-apps/api": "^2.9.1",
     "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-fs": "^2.4.5",
-    "@tauri-apps/plugin-sql": "^2.3.1"
+    "@tauri-apps/plugin-sql": "^2.3.1",
+    "jspdf": "^4.0.0"
   }
 }
