--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -107,6 +107,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Cache Vite build
+        uses: actions/cache@v4
+        with:
+          path: |
+            node_modules/.vite
+            .svelte-kit
+          key: vite-${{ runner.os }}-${{ hashFiles('src/**', 'vite.config.ts', 'svelte.config.js', 'tsconfig.json') }}
+          restore-keys: |
+            vite-${{ runner.os }}-
+
       - name: Run TypeScript check
         run: npm run check
 
@@ -156,6 +166,16 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
+      - name: Cache apt packages (Ubuntu)
+        if: matrix.platform == 'ubuntu-22.04'
+        uses: actions/cache@v4
+        with:
+          path: |
+            /var/cache/apt/archives
+          key: apt-ubuntu-22.04-tauri-deps
+          restore-keys: |
+            apt-ubuntu-22.04-
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -174,6 +194,16 @@ jobs:
 
       - name: Install frontend dependencies
         run: npm ci
+
+      - name: Cache Vite build
+        uses: actions/cache@v4
+        with:
+          path: |
+            node_modules/.vite
+            .svelte-kit
+          key: vite-${{ runner.os }}-${{ hashFiles('src/**', 'vite.config.ts', 'svelte.config.js', 'tsconfig.json') }}
+          restore-keys: |
+            vite-${{ runner.os }}-
 
       - name: Build Tauri app and create release
         uses: tauri-apps/tauri-action@v0
