chore: Prepare for public repository release
- Add proprietary LICENSE file (yorphos, mail@yrp.sh)
- Add license, author, repository fields to package.json
- Update Cargo.toml with proper metadata (name: invariant)
- Update README.md license badge and contributing section
- Enable multi-platform CI builds (Linux, Windows, macOS)
- Remove cost-aware restrictions from workflow comments
- Clean up release workflow documentation

All tests pass (501/501)

--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "private": true,
   "version": "0.2.0",
   "type": "module",
+  "license": "UNLICENSED",
+  "author": "yorphos",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yorphos/invariant.git"
+  },
   "scripts": {
     "dev": "tauri dev",
     "dev:vite": "vite",
