--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,5 @@
-# Continuous Integration - Tests, type checking, and version sync on every push/PR
-# This workflow runs quickly to catch issues early without building full installers
-#
-# COST NOTE: This workflow uses ONLY Linux runners to minimize GitHub Actions costs.
-# Private repo pricing: Linux=1x, Windows=2x, macOS=10x (3000 minutes/month free)
-# Full multi-platform builds only happen during releases.
+# Continuous Integration - Tests, type checking, and build verification on every push/PR
+# This workflow validates code quality across all platforms
 
 name: CI
 
@@ -93,18 +89,29 @@ jobs:
       - name: Build frontend
         run: npm run build
 
-  # Verify Tauri builds work (Linux only for cost efficiency)
-  # Multi-platform builds are done during releases only
+  # Verify Tauri builds work on all platforms
   build-check:
-    name: Build Check (Linux)
+    name: Build Check (${{ matrix.name }})
     needs: [version-check, test]
-    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - name: Linux
+            platform: ubuntu-22.04
+          - name: Windows
+            platform: windows-latest
+          - name: macOS
+            platform: macos-latest
+
+    runs-on: ${{ matrix.platform }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Install dependencies (Ubuntu)
+        if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
