--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 # Release Build - Creates distributable installers for all platforms
-# Automatically triggered when version is bumped in tauri.conf.json
+# Automatically triggered when version is bumped in config files
 # Creates a GitHub Release with all platform installers attached
 
 name: Release
@@ -9,7 +9,6 @@ on:
     branches:
       - main
     paths:
-      # Only run when version-related files change
       - 'src-tauri/tauri.conf.json'
       - 'package.json'
       - 'src-tauri/Cargo.toml'
@@ -32,7 +31,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2  # Need previous commit to compare
+          fetch-depth: 2
 
       - name: Check for version change
         id: check
@@ -81,7 +80,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           VERSION=${{ steps.check.outputs.version }}
-          # Check if tag already exists
           if git ls-remote --tags origin | grep -q "refs/tags/v$VERSION"; then
             echo "Release v$VERSION already exists - skipping"
             echo "should_release=false" >> $GITHUB_OUTPUT
@@ -134,22 +132,18 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # Windows x64
           - name: Windows
             platform: windows-latest
             args: ''
 
-          # macOS Apple Silicon (M1/M2/M3)
           - name: macOS (Apple Silicon)
             platform: macos-latest
             args: '--target aarch64-apple-darwin'
 
-          # macOS Intel
           - name: macOS (Intel)
             platform: macos-latest
             args: '--target x86_64-apple-darwin'
 
-          # Linux x64
           - name: Linux
             platform: ubuntu-22.04
             args: ''
@@ -165,16 +159,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
-
-      - name: Cache apt packages (Ubuntu)
-        if: matrix.platform == 'ubuntu-22.04'
-        uses: actions/cache@v4
-        with:
-          path: |
-            /var/cache/apt/archives
-          key: apt-ubuntu-22.04-tauri-deps
-          restore-keys: |
-            apt-ubuntu-22.04-
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -250,7 +234,6 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          # Create annotated tag
           git tag -a "v$VERSION" -m "Release v$VERSION"
           git push origin "v$VERSION"
           
