--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "invariant"
-version = "0.2.0"
+version = "0.3.0"
 description = "Professional offline-first accounting software for small businesses"
 authors = ["yorphos"]
 license = "UNLICENSED"
@@ -26,4 +26,7 @@ tauri-plugin-log = "2"
 tauri-plugin-sql = { version = "2", features = ["sqlite"] }
 tauri-plugin-fs = "2"
 tauri-plugin-dialog = "2"
+tauri-plugin-updater = "2.9.0"
+thiserror = "2.0.18"
 sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
+
