--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,7 @@
 # Release Build - Creates distributable installers for all platforms
-# Triggered ONLY after CI workflow completes successfully
-# Checks if version was bumped, then creates GitHub Release with all platform installers
+# Triggered by:
+# 1. After CI workflow completes successfully (automatic)
+# 2. Manual tag push (git push origin vX.Y.Z)
 
 name: Release
 
@@ -11,6 +12,9 @@ on:
       - completed
     branches:
       - main
+  push:
+    tags:
+      - 'v*'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -18,20 +22,33 @@ concurrency:
 
 jobs:
   # First, check if CI actually succeeded (fail fast if CI failed)
+  # Skip this check for manual tag pushes (tags are intentional releases)
   check-ci-success:
     name: Verify CI Success
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
     
     steps:
       - name: CI workflow succeeded
         run: echo "CI workflow completed successfully, proceeding with release checks"
 
+  # For manual tag pushes, skip CI check entirely
+  skip-ci-check:
+    name: Skip CI Check (Manual Tag)
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
+    
+    steps:
+      - name: Manual tag push detected
+        run: echo "Manual tag push detected, bypassing CI check"
+
   # Check if this is actually a version bump that needs a release
+  # Depends on either CI passing OR manual tag push
   check-version:
     name: Check Version Change
     runs-on: ubuntu-latest
-    needs: check-ci-success
+    needs: [check-ci-success, skip-ci-check]
+    if: ${{ always() && (needs.check-ci-success.result == 'success' || needs.skip-ci-check.result == 'success') }}
     outputs:
       should_release: ${{ steps.check.outputs.should_release }}
       version: ${{ steps.check.outputs.version }}
@@ -46,41 +63,52 @@ jobs:
       - name: Check for version change
         id: check
         run: |
-          # Get current version from tauri.conf.json (source of truth)
-          CURRENT_VERSION=$(node -p "require('./src-tauri/tauri.conf.json').version")
-          echo "Current version: $CURRENT_VERSION"
-          echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
-
-          # Get version from package.json
-          PKG_VERSION=$(node -p "require('./package.json').version")
-          echo "package.json version: $PKG_VERSION"
-
-          # Get version from Cargo.toml
-          CARGO_VERSION=$(grep '^version = ' src-tauri/Cargo.toml | head -1 | sed 's/version = "\(.*\)"/\1/')
-          echo "Cargo.toml version: $CARGO_VERSION"
-
-          # Check if all versions are in sync
-          if [ "$CURRENT_VERSION" = "$PKG_VERSION" ] && [ "$CURRENT_VERSION" = "$CARGO_VERSION" ]; then
-            echo "versions_synced=true" >> $GITHUB_OUTPUT
-            echo "All versions are in sync: $CURRENT_VERSION"
-          else
-            echo "versions_synced=false" >> $GITHUB_OUTPUT
-            echo "::error::Version mismatch! tauri.conf.json=$CURRENT_VERSION, package.json=$PKG_VERSION, Cargo.toml=$CARGO_VERSION"
-            exit 1
-          fi
-
-          # Get previous version from tauri.conf.json
-          git show HEAD~1:src-tauri/tauri.conf.json > /tmp/old-tauri.conf.json 2>/dev/null || echo '{"version":"0.0.0"}' > /tmp/old-tauri.conf.json
-          OLD_VERSION=$(node -p "require('/tmp/old-tauri.conf.json').version" 2>/dev/null || echo "0.0.0")
-          echo "Previous version: $OLD_VERSION"
-
-          # Check if version actually changed
-          if [ "$CURRENT_VERSION" != "$OLD_VERSION" ]; then
+          # Determine if this is a tag push or workflow_run trigger
+          if [ "${{ github.event_name }}" = "push" ] && [ "${{ startsWith(github.ref, 'refs/tags/') }}" = "true" ]; then
+            # Manual tag push - extract version from tag name
+            TAG_VERSION=$(echo "${{ github.ref }}" | sed 's|refs/tags/v||')
+            echo "Manual tag push detected: v$TAG_VERSION"
             echo "should_release=true" >> $GITHUB_OUTPUT
-            echo "Version changed from $OLD_VERSION to $CURRENT_VERSION - will create release"
+            echo "version=$TAG_VERSION" >> $GITHUB_OUTPUT
+            echo "Will create release for manually pushed tag v$TAG_VERSION"
           else
-            echo "should_release=false" >> $GITHUB_OUTPUT
-            echo "Version unchanged ($CURRENT_VERSION) - skipping release"
+            # workflow_run trigger - check version change
+            # Get current version from tauri.conf.json (source of truth)
+            CURRENT_VERSION=$(node -p "require('./src-tauri/tauri.conf.json').version")
+            echo "Current version: $CURRENT_VERSION"
+            echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+
+            # Get version from package.json
+            PKG_VERSION=$(node -p "require('./package.json').version")
+            echo "package.json version: $PKG_VERSION"
+
+            # Get version from Cargo.toml
+            CARGO_VERSION=$(grep '^version = ' src-tauri/Cargo.toml | head -1 | sed 's/version = "\(.*\)"/\1/')
+            echo "Cargo.toml version: $CARGO_VERSION"
+
+            # Check if all versions are in sync
+            if [ "$CURRENT_VERSION" = "$PKG_VERSION" ] && [ "$CURRENT_VERSION" = "$CARGO_VERSION" ]; then
+              echo "versions_synced=true" >> $GITHUB_OUTPUT
+              echo "All versions are in sync: $CURRENT_VERSION"
+            else
+              echo "versions_synced=false" >> $GITHUB_OUTPUT
+              echo "::error::Version mismatch! tauri.conf.json=$CURRENT_VERSION, package.json=$PKG_VERSION, Cargo.toml=$CARGO_VERSION"
+              exit 1
+            fi
+
+            # Get previous version from tauri.conf.json
+            git show HEAD~1:src-tauri/tauri.conf.json > /tmp/old-tauri.conf.json 2>/dev/null || echo '{"version":"0.0.0"}' > /tmp/old-tauri.conf.json
+            OLD_VERSION=$(node -p "require('/tmp/old-tauri.conf.json').version" 2>/dev/null || echo "0.0.0")
+            echo "Previous version: $OLD_VERSION"
+
+            # Check if version actually changed
+            if [ "$CURRENT_VERSION" != "$OLD_VERSION" ]; then
+              echo "should_release=true" >> $GITHUB_OUTPUT
+              echo "Version changed from $OLD_VERSION to $CURRENT_VERSION - will create release"
+            else
+              echo "should_release=false" >> $GITHUB_OUTPUT
+              echo "Version unchanged ($CURRENT_VERSION) - skipping release"
+            fi
           fi
 
       - name: Check if release already exists
@@ -189,10 +217,11 @@ jobs:
           args: ${{ matrix.args }}
 
   # Create git tag after successful release
+  # Only for workflow_run triggers (tags already exist for manual pushes)
   create-tag:
     name: Create Git Tag
     needs: [check-version, build-release]
-    if: needs.check-version.outputs.should_release == 'true'
+    if: needs.check-version.outputs.should_release == 'true' && github.event_name == 'workflow_run'
     runs-on: ubuntu-latest
     permissions:
       contents: write
