--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,8 +63,12 @@ jobs:
       - name: Check for version change
         id: check
         run: |
+          # Debug: Show trigger information
+          echo "Trigger event: ${{ github.event_name }}"
+          echo "Git ref: ${{ github.ref }}"
+          
           # Determine if this is a tag push or workflow_run trigger
-          if [ "${{ github.event_name }}" = "push" ] && [ "${{ startsWith(github.ref, 'refs/tags/') }}" = "true" ]; then
+          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
             # Manual tag push - extract version from tag name
             TAG_VERSION=$(echo "${{ github.ref }}" | sed 's|refs/tags/v||')
             echo "Manual tag push detected: v$TAG_VERSION"
