--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,54 +1,28 @@
 # Release Build - Creates distributable installers for all platforms
-# Triggered by:
-# 1. After CI workflow completes successfully (automatic)
-# 2. Manual tag push (git push origin vX.Y.Z)
+# Automatically triggered when version is bumped in tauri.conf.json
+# Creates a GitHub Release with all platform installers attached
 
 name: Release
 
 on:
-  workflow_run:
-    workflows: ["CI"]
-    types:
-      - completed
+  push:
     branches:
       - main
-  push:
-    tags:
-      - 'v*'
+    paths:
+      # Only run when version-related files change
+      - 'src-tauri/tauri.conf.json'
+      - 'package.json'
+      - 'src-tauri/Cargo.toml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  # First, check if CI actually succeeded (fail fast if CI failed)
-  # Skip this check for manual tag pushes (tags are intentional releases)
-  check-ci-success:
-    name: Verify CI Success
-    runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' }}
-    
-    steps:
-      - name: CI workflow succeeded
-        run: echo "CI workflow completed successfully, proceeding with release checks"
-
-  # For manual tag pushes, skip CI check entirely
-  skip-ci-check:
-    name: Skip CI Check (Manual Tag)
-    runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' && startsWith(github.ref, 'refs/tags/') }}
-    
-    steps:
-      - name: Manual tag push detected
-        run: echo "Manual tag push detected, bypassing CI check"
-
   # Check if this is actually a version bump that needs a release
-  # Depends on either CI passing OR manual tag push
   check-version:
     name: Check Version Change
     runs-on: ubuntu-latest
-    needs: [check-ci-success, skip-ci-check]
-    if: ${{ always() && (needs.check-ci-success.result == 'success' || needs.skip-ci-check.result == 'success') }}
     outputs:
       should_release: ${{ steps.check.outputs.should_release }}
       version: ${{ steps.check.outputs.version }}
@@ -58,61 +32,46 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 2  # Need previous commit to compare
 
       - name: Check for version change
         id: check
         run: |
-          # Debug: Show trigger information
-          echo "Trigger event: ${{ github.event_name }}"
-          echo "Git ref: ${{ github.ref }}"
-          
-          # Determine if this is a tag push or workflow_run trigger
-          if [[ "${{ github.ref }}" == refs/tags/* ]]; then
-            # Manual tag push - extract version from tag name
-            TAG_VERSION=$(echo "${{ github.ref }}" | sed 's|refs/tags/v||')
-            echo "Manual tag push detected: v$TAG_VERSION"
-            echo "should_release=true" >> $GITHUB_OUTPUT
-            echo "version=$TAG_VERSION" >> $GITHUB_OUTPUT
-            echo "Will create release for manually pushed tag v$TAG_VERSION"
+          # Get current version from tauri.conf.json (source of truth)
+          CURRENT_VERSION=$(node -p "require('./src-tauri/tauri.conf.json').version")
+          echo "Current version: $CURRENT_VERSION"
+          echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+
+          # Get version from package.json
+          PKG_VERSION=$(node -p "require('./package.json').version")
+          echo "package.json version: $PKG_VERSION"
+
+          # Get version from Cargo.toml
+          CARGO_VERSION=$(grep '^version = ' src-tauri/Cargo.toml | head -1 | sed 's/version = "\(.*\)"/\1/')
+          echo "Cargo.toml version: $CARGO_VERSION"
+
+          # Check if all versions are in sync
+          if [ "$CURRENT_VERSION" = "$PKG_VERSION" ] && [ "$CURRENT_VERSION" = "$CARGO_VERSION" ]; then
+            echo "versions_synced=true" >> $GITHUB_OUTPUT
+            echo "All versions are in sync: $CURRENT_VERSION"
           else
-            # workflow_run trigger - check version change
-            # Get current version from tauri.conf.json (source of truth)
-            CURRENT_VERSION=$(node -p "require('./src-tauri/tauri.conf.json').version")
-            echo "Current version: $CURRENT_VERSION"
-            echo "version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
+            echo "versions_synced=false" >> $GITHUB_OUTPUT
+            echo "::error::Version mismatch! tauri.conf.json=$CURRENT_VERSION, package.json=$PKG_VERSION, Cargo.toml=$CARGO_VERSION"
+            exit 1
+          fi
 
-            # Get version from package.json
-            PKG_VERSION=$(node -p "require('./package.json').version")
-            echo "package.json version: $PKG_VERSION"
+          # Get previous version from tauri.conf.json
+          git show HEAD~1:src-tauri/tauri.conf.json > /tmp/old-tauri.conf.json 2>/dev/null || echo '{"version":"0.0.0"}' > /tmp/old-tauri.conf.json
+          OLD_VERSION=$(node -p "require('/tmp/old-tauri.conf.json').version" 2>/dev/null || echo "0.0.0")
+          echo "Previous version: $OLD_VERSION"
 
-            # Get version from Cargo.toml
-            CARGO_VERSION=$(grep '^version = ' src-tauri/Cargo.toml | head -1 | sed 's/version = "\(.*\)"/\1/')
-            echo "Cargo.toml version: $CARGO_VERSION"
-
-            # Check if all versions are in sync
-            if [ "$CURRENT_VERSION" = "$PKG_VERSION" ] && [ "$CURRENT_VERSION" = "$CARGO_VERSION" ]; then
-              echo "versions_synced=true" >> $GITHUB_OUTPUT
-              echo "All versions are in sync: $CURRENT_VERSION"
-            else
-              echo "versions_synced=false" >> $GITHUB_OUTPUT
-              echo "::error::Version mismatch! tauri.conf.json=$CURRENT_VERSION, package.json=$PKG_VERSION, Cargo.toml=$CARGO_VERSION"
-              exit 1
-            fi
-
-            # Get previous version from tauri.conf.json
-            git show HEAD~1:src-tauri/tauri.conf.json > /tmp/old-tauri.conf.json 2>/dev/null || echo '{"version":"0.0.0"}' > /tmp/old-tauri.conf.json
-            OLD_VERSION=$(node -p "require('/tmp/old-tauri.conf.json').version" 2>/dev/null || echo "0.0.0")
-            echo "Previous version: $OLD_VERSION"
-
-            # Check if version actually changed
-            if [ "$CURRENT_VERSION" != "$OLD_VERSION" ]; then
-              echo "should_release=true" >> $GITHUB_OUTPUT
-              echo "Version changed from $OLD_VERSION to $CURRENT_VERSION - will create release"
-            else
-              echo "should_release=false" >> $GITHUB_OUTPUT
-              echo "Version unchanged ($CURRENT_VERSION) - skipping release"
-            fi
+          # Check if version actually changed
+          if [ "$CURRENT_VERSION" != "$OLD_VERSION" ]; then
+            echo "should_release=true" >> $GITHUB_OUTPUT
+            echo "Version changed from $OLD_VERSION to $CURRENT_VERSION - will create release"
+          else
+            echo "should_release=false" >> $GITHUB_OUTPUT
+            echo "Version unchanged ($CURRENT_VERSION) - skipping release"
           fi
 
       - name: Check if release already exists
@@ -122,15 +81,42 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           VERSION=${{ steps.check.outputs.version }}
+          # Check if tag already exists
           if git ls-remote --tags origin | grep -q "refs/tags/v$VERSION"; then
             echo "Release v$VERSION already exists - skipping"
             echo "should_release=false" >> $GITHUB_OUTPUT
           fi
 
+  # Run tests before building release
+  test:
+    name: Test & Lint
+    needs: check-version
+    if: needs.check-version.outputs.should_release == 'true'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run TypeScript check
+        run: npm run check
+
+      - name: Run tests
+        run: npm run test:run
+
   # Build and release for all platforms
   build-release:
     name: Build (${{ matrix.name }})
-    needs: [check-version]
+    needs: [check-version, test]
     if: needs.check-version.outputs.should_release == 'true'
     permissions:
       contents: write
@@ -138,18 +124,22 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          # Windows x64
           - name: Windows
             platform: windows-latest
             args: ''
 
+          # macOS Apple Silicon (M1/M2/M3)
           - name: macOS (Apple Silicon)
             platform: macos-latest
             args: '--target aarch64-apple-darwin'
 
+          # macOS Intel
           - name: macOS (Intel)
             platform: macos-latest
             args: '--target x86_64-apple-darwin'
 
+          # Linux x64
           - name: Linux
             platform: ubuntu-22.04
             args: ''
@@ -185,21 +175,10 @@ jobs:
       - name: Install frontend dependencies
         run: npm ci
 
-      - name: Cache Vite build
-        uses: actions/cache@v4
-        with:
-          path: |
-            node_modules/.vite
-            .svelte-kit
-          key: vite-${{ runner.os }}-${{ hashFiles('src/**', 'vite.config.ts', 'svelte.config.js', 'tsconfig.json') }}
-          restore-keys: |
-            vite-${{ runner.os }}-
-
       - name: Build Tauri app and create release
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
         with:
           tagName: v${{ needs.check-version.outputs.version }}
           releaseName: 'Invariant Accounting v${{ needs.check-version.outputs.version }}'
@@ -221,11 +200,10 @@ jobs:
           args: ${{ matrix.args }}
 
   # Create git tag after successful release
-  # Only for workflow_run triggers (tags already exist for manual pushes)
   create-tag:
     name: Create Git Tag
     needs: [check-version, build-release]
-    if: needs.check-version.outputs.should_release == 'true' && github.event_name == 'workflow_run'
+    if: needs.check-version.outputs.should_release == 'true'
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -242,6 +220,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
+          # Create annotated tag
           git tag -a "v$VERSION" -m "Release v$VERSION"
           git push origin "v$VERSION"
           
