fix: Add Tauri cache clearing before JSON reads to prevent corruption
Added explicit cache clearing step to fix JSON parsing errors:
- Clears ~/.tauri/ cache directory before any step reads tauri.conf.json
- Prevents corrupted cached data from causing Node.js JSON parse errors
- Added immediately after checkout, before Node.js setup
- Keeps all version checking and signing logic intact

Root cause was: GitHub Actions checkout action was caching tauri.conf.json with garbage/corrupted data between workflow runs.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Clear Tauri cache
+        run: rm -rf ~/.tauri/
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
