fix: Disable checkout caching to prevent corrupted tauri.conf.json
Disabled ALL GitHub Actions checkout caching to prevent cache corruption:
- Added cache: false to checkout step
- Added fetch-depth: 0 to avoid shallow clone
- Keeps cache clearing step for Tauri cache
- Prevents GitHub Actions from caching corrupted tauri.conf.json between runs

This should eliminate the persistent JSON parsing errors.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          cache: false
 
       - name: Clear Tauri cache
         run: rm -rf ~/.tauri/
