--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "invariant",
   "private": true,
-  "version": "0.2.0",
+  "version": "0.4.0",
   "type": "module",
   "license": "UNLICENSED",
   "author": "yorphos",
@@ -42,6 +42,7 @@
     "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-fs": "^2.4.5",
     "@tauri-apps/plugin-sql": "^2.3.1",
+    "@tauri-apps/plugin-updater": "^2.9.0",
     "jspdf": "^4.0.0"
   }
 }
