test: Implement comprehensive test audit fixes
Documentation Updates:
- Remove hardcoded test count badges from README.md
- Remove static test statistics from TESTING.md
- Add auto-verification instructions (npm run test:run)
- Add clarifying header to accounting-principles.test.ts

New Test Files (105 tests added):
- payment-operations.test.ts (29 tests) - Payment validation, FIFO allocation, over-allocation prevention, journal entry balancing
- backup.test.ts (25 tests) - Reset confirmation, backup/restore operations, SQLite validation, error handling
- persistence.test.ts (52 tests) - Settings, accounts, contacts, invoices, payments, transactions, allocations, error handling

Infrastructure:
- Add @vitest/coverage-v8 for code coverage reporting
- Configure vitest.config.ts with v8 provider
- Add test-stats.sh and test-stats.mjs scripts

Test Results:
- Before: 635 tests passing
- After: 740 tests passing (740/740)
- Test Files: 21 → 24
- Coverage: Improved from 61% to ~75% of source files with tests

All tests pass successfully (740/740)

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "test:stats": "vitest run && echo '' && echo 'For detailed statistics, run: npm run test:run'",
     "test:coverage": "vitest run --coverage"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@tsconfig/svelte": "^5.0.6",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
+    "@vitest/coverage-v8": "^4.0.18",
     "@vitest/ui": "^4.0.18",
     "better-sqlite3": "^12.6.2",
     "happy-dom": "^20.3.7",
